--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -10,5 +10,6 @@
 <body>
     <h1>Hello YupGG</h1>
     <input type="text" placeholder="소환사 이름">
+    <input type="button" value="검색">
 </body>
 </html>
