--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -3,19 +3,17 @@
 <div th:fragment="header" style="position:sticky; top:0; z-index:1; background-color:white;">
     <div class="w-100">
         <header class="border-bottom lh-1 pb-3" style="background-color:#5383e8;">
-            <div class="row flex-nowrap justify-content-between align-items-center" style="font-size:13px;">
-                <div class="col-4" style="padding:70px 0px 0px;">
-                    <a class="link-secondary mx-5"></a>
-                    <a class="link-secondary" href="/admin/item/new" sec:authorize="hasAnyAuthority('ROLE_ADMIN')">상품등록</a>
-                    <a class="link-secondary mx-5" href="/admin/items" sec:authorize="hasAnyAuthority('ROLE_ADMIN')">상품관리</a>
-                </div>
-                <div class="col-4 text-center">
-                    <a class="blog-header-logo text-body-emphasis text-decoration-none" href="/">
-                        <img src="/css/images/worksin.logo.png" style="max-width:50%; height:auto; padding-top:15px;">
+            <div class="row pt-3 flex-nowrap justify-content-between align-items-center" style="font-size:20px; height:50px; line-height:50px;">
+                <div class="col-8" style="padding:0;">
+                    <a class="blog-header-logo text-body-emphasis text-decoration-none px-5 pt-0" href="/">
+                        <img src="/images/yupLogo.png" width="100px" style="max-width:25%; height:auto;">
                     </a>
+                    <a class="link-secondary mx-5"></a>
+                    <a class="link-secondary text-white-50 fw-bolder align-middle" href="/admin/item/new" style="text-decoration:none;">챔피언 분석</a>
+                    <a class="link-secondary text-white-50 fw-bolder align-middle mx-5" href="/admin/items" style="text-decoration:none;">랭킹</a>
+                    <a class="link-secondary text-white-50 fw-bolder align-middle" href="/admin/items" style="text-decoration:none;">아이템</a>
                 </div>
-                <div class="col-4 d-flex justify-content-end align-items-center" style="padding:60px 0px 0px;">
-
+                <div class="col-4 d-flex justify-content-end align-items-center">
                     <form class="d-flex" id="searchForm" style="margin-right: 30px;">
                         <input name="searchQuery" id="searchQuery" class="form-control" type="search"
                                placeholder="Search" aria-label="Search">
