--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -8,7 +8,7 @@
 <body style="background-color:#5383e8;">
 <div layout:fragment="content">
     <div class="position-absolute top-50 start-50 translate-middle">
-        <h1>Hello YupGG</h1>
+        <img src="/images/yupLogo.png" style="width:200px;" class="pb-2">
         <form class="d-flex pb-5" id="searchForm">
             <input name="searchQuery" id="searchQuery" class="form-control" type="search"
                    placeholder="소환사 검색" aria-label="Search">
