--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -14,20 +14,9 @@
                     <a class="link-secondary text-white-50 fw-bolder align-middle" href="/admin/items" style="text-decoration:none;">아이템</a>
                 </div>
                 <div class="col-4 d-flex justify-content-end align-items-center">
-                    <form class="d-flex" id="searchForm" style="margin-right: 30px;">
-                        <input name="searchQuery" id="searchQuery" class="form-control" type="search"
-                               placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-dark my-2 my-sm-0 btn-search" type="submit">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor"
-                                 stroke-linecap="round" stroke-linejoin="round" stroke-width="2" role="img"
-                                 viewBox="0 0 24 24">
-                                <title>Search</title>
-                                <circle cx="10.5" cy="10.5" r="7.5" />
-                                <path d="M21 21l-5.2-5.2" />
-                            </svg>
-                        </button>
-                    </form>
-
+                    <a class="link-secondary text-white-50 fw-bolder align-middle" aria-current="page" href="/members/login" style="text-decoration: none; margin-right:60px;" sec:authorize="isAnonymous()">
+                         로그인
+                    </a>
                 </div>
             </div>
         </header>
