--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -29,7 +29,7 @@
         <img src="/images/yupLogo.png" style="width:450px;" class="pt-5 mt-5">
     </div>
     <div class="position-absolute top-50 start-50 translate-middle pb-5">
-        <form class="row d-flex pb-5 bg-white rounded-pill" id="searchForm" style=" width: 700px; height:50px;" action="/summoners" method="get">
+        <form class="row d-flex pb-5 bg-white rounded-pill" id="searchForm" style=" width: 700px; height:50px;" action="/riot/summoners" method="get">
             <div class="my-2 col-2">
                 <button type="button" class=" btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                     한국
