--- a/src/main/resources/templates/search/searchPage.html
+++ b/src/main/resources/templates/search/searchPage.html
@@ -10,7 +10,7 @@
 </head>
 <body style="background-color:white;">
 <div layout:fragment="content">
-    <h1>안녕 나는 <span th:text="${summoners+summonersTag}"></span>야</h1>
+    <h1>안녕 나는 <span th:text="${puuid}"></span>야</h1>
 </div>
 <th:block layout:fragment="script"></th:block>
 </body>
