--- a/src/main/resources/templates/search/searchPage.html
+++ b/src/main/resources/templates/search/searchPage.html
@@ -10,16 +10,21 @@
 </head>
 <body style="background-color:white;">
 <div layout:fragment="content">
-    <div class="container w-75">
-        <div class="row">
-            <div class="summonersImg mx-5 col-1">
-                <img th:src="|https://ddragon.leagueoflegends.com/cdn/14.15.1/img/profileicon/${summoners.profileIconId}.png|"
-                     th:alt="${summoners.profileIconId}" style="width:100px; border-radius:15px;">
-                <p class="bg-dark text-white" style="margin-left:30px; width:40px; border-radius:15px; text-align:center;"><span th:text="${summoners.summonerLevel}"></span></p>
+    <div class="container-fluid w-75">
+        <div class="summonerInfo row">
+            <div class="col row">
+                <div class="summonersImg pl-5 mw-5 me-3 col-2">
+                    <img th:src="|https://ddragon.leagueoflegends.com/cdn/14.15.1/img/profileicon/${summoners.profileIconId}.png|"
+                         th:alt="${summoners.profileIconId}" style="width:100px; border-radius:15px;" class="z-2 position-absolute">
+                    <p class="bg-dark text-white z-3 position-absolute" style="margin-top:85px; margin-left:30px; width:40px; border-radius:15px; text-align:center;"><span th:text="${summoners.summonerLevel}"></span></p>
+                </div>
+                <div class="info col-8">
+                    <h3><span th:text="${puuidDto.gameName}"></span>&nbsp;<span class="text-body-secondary" th:text="${'#'+puuidDto.tagLine}"></span></h3>
+                    <p>랭킹 : </p>
+                </div>
             </div>
-            <div class="info col-8">
-                <h3><span th:text="${puuidDto.gameName}"></span>&nbsp;<span class="text-body-secondary" th:text="${'#'+puuidDto.tagLine}"></span></h3>
-                <p>랭킹 : </p>
+            <div class="col">
+                <p th:text="${leagueEntryDto.tier+' '+leagueEntryDto.rank}"></p>
             </div>
         </div>
     </div>
