--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -8,14 +8,9 @@
     </style>
 </head>
 
-<footer class="my-4 border-top position-absolute bottom-0 w-100" style="background-color:#5383e8;">
+<footer class="my-4 border-top position-absolute bottom-0 w-100" style="background-color:#1f1f1f;">
     <div class="col-md-4 d-flex align-items-center">
-        <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
-            <svg class="bi" width="30" height="24">
-                <use xlink:href="#bootstrap"/>
-            </svg>
-        </a>
-        <span class="mb-3 mb-md-0 text-body-secondary">&copy; 2024 Company, Inc</span>
+        <span class="mb-3 mb-md-0 text-white" style="text-align:center;">&copy; 2024 Company, Inc</span>
     </div>
 </footer>
 
