--- a/src/main/resources/static/css/layout1.css
+++ b/src/main/resources/static/css/layout1.css
@@ -2,9 +2,11 @@ html{
     position: relative;
     min-height : 100%;
     margin: 0;
+    background-color : #1f1f1f;
     }
    body{
     min-height: 100%;
+    background-color : #1f1f1f;
    }
    .footer{
    position: absolute;
@@ -17,5 +19,6 @@ html{
    }
    .content{
    margin : 50px 200px 100px 200px;
+
 
 }
