--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<div th:fragment="header" style="position:sticky; top:0; z-index:1; background-color:white;">
+<div th:fragment="header" style="position:sticky; top:0; z-index:1;">
     <div class="w-100">
-        <header class="border-bottom lh-1 pb-3" style="background-color:#5383e8;">
-            <div class="row pt-3 flex-nowrap justify-content-between align-items-center" style="font-size:20px; height:50px; line-height:50px;">
+        <header class="lh-1 pb-3" style="background-color:#1f1f1f;">
+            <div class="row pt-3 flex-nowrap justify-content-between align-items-center" style="width:1000px; margin:0 auto; font-size:20px; height:50px; line-height:50px;">
                 <div class="col-8" style="padding:0;">
                     <a class="blog-header-logo text-body-emphasis text-decoration-none px-5 pt-0" href="/">
-                        <img src="/images/yupLogo.png" width="100px" style="max-width:25%; height:auto;">
+                        <img src="/images/topLogo.png" width="100px" style="max-width:25%; height:auto;">
                     </a>
                     <a class="link-secondary mx-5"></a>
                     <a class="link-secondary text-white-50 fw-bolder align-middle" href="/admin/item/new" style="text-decoration:none;">챔피언 분석</a>
