--- a/src/main/resources/templates/search/searchPage.html
+++ b/src/main/resources/templates/search/searchPage.html
@@ -5,28 +5,56 @@
 <head>
     <th:block layout:fragment="css"></th:block>
     <style>
+        p{
+            color:#fff;
+        }
+
+        #gangsin{
+        background-color:orange;
+        color:#fff;
+
+        height:50px;
+        }
+        #gangsin:hover{
+        border: 2px solid #ffffff;
+        background-color:#ffa500;
+        color:#ffffff;
+        }
+
 
     </style>
 </head>
-<body style="background-color:white;">
+<body>
 <div layout:fragment="content">
-    <div class="container-fluid w-75">
-        <div class="summonerInfo row">
+    <div class="container-fluid" style="width:1000px;">
+        <div class="summonerInfo row"  style="margin: 0 auto;">
             <div class="col row">
-                <div class="summonersImg pl-5 mw-5 me-3 col-2">
+                <div class="summonersImg col-3">
                     <img th:src="|https://ddragon.leagueoflegends.com/cdn/14.15.1/img/profileicon/${summoners.profileIconId}.png|"
                          th:alt="${summoners.profileIconId}" style="width:100px; border-radius:15px;" class="z-2 position-absolute">
-                    <p class="bg-dark text-white z-3 position-absolute" style="margin-top:85px; margin-left:30px; width:40px; border-radius:15px; text-align:center;"><span th:text="${summoners.summonerLevel}"></span></p>
+                    <p class="text-white z-3 position-absolute" style="margin-top:85px; background-color:#1f1f1f; margin-left:30px; width:40px; border-radius:15px; text-align:center;"><span th:text="${summoners.summonerLevel}"></span></p>
                 </div>
                 <div class="info col-8">
-                    <h3><span th:text="${puuidDto.gameName}"></span>&nbsp;<span class="text-body-secondary" th:text="${'#'+puuidDto.tagLine}"></span></h3>
-                    <p>랭킹 : </p>
+                    <p class="fs-3 fw-bold"><span th:text="${puuidDto.gameName}"></span>&nbsp;<span class="text-white-50" th:text="${'#'+puuidDto.tagLine}"></span></p>
+                    <button class="btn btn-dark" id="gangsin">전적 갱신</button>
                 </div>
             </div>
-            <div class="col">
-                <p th:text="${leagueEntryDto.tier+' '+leagueEntryDto.rank}"></p>
+            <div class="col row">
+                <div class="tierImg col-3">
+                <img th:src="@{'/images/'+${leagueEntryDto.tier}+'.png'}" th:alt="${leagueEntryDto.tier}" style="width:100px;">
+                </div>
+                <div class="tierInfo col-8">
+                    <p class="fs-4 fw-bold" style="margin-bottom:-3px;" th:text="${leagueEntryDto.tier+' '+leagueEntryDto.rank}"><br></p>
+                    <p class="fs-5" style="margin-bottom:-3px;" th:text="${leagueEntryDto.leaguePoints+' LP'}"></p>
+                    <p class="fs-6" th:text="${'승률 ' + (leagueEntryDto.wins * 100) / (leagueEntryDto.wins + leagueEntryDto.losses) + '% ('
+                    + leagueEntryDto.wins + '승 ' + leagueEntryDto.losses + '패)'}"></p>
+
+                </div>
             </div>
         </div>
+        <section class="my-5">
+            <p>안녕? 나는 전적이 나올 공간이야</p>
+        </section>
     </div>
 
 </div>
