--- a/src/main/resources/templates/search/searchPage.html
+++ b/src/main/resources/templates/search/searchPage.html
@@ -27,29 +27,37 @@
 <body>
 <div layout:fragment="content">
     <div class="container-fluid" style="width:1000px;">
-        <div class="summonerInfo row"  style="margin: 0 auto;">
+        <div class="summonerInfo row" style="margin: 0 auto;">
             <div class="col row">
                 <div class="summonersImg col-3">
                     <img th:src="|https://ddragon.leagueoflegends.com/cdn/14.15.1/img/profileicon/${summoners.profileIconId}.png|"
-                         th:alt="${summoners.profileIconId}" style="width:100px; border-radius:15px;" class="z-2 position-absolute">
-                    <p class="text-white z-3 position-absolute" style="margin-top:85px; background-color:#1f1f1f; margin-left:30px; width:40px; border-radius:15px; text-align:center;"><span th:text="${summoners.summonerLevel}"></span></p>
+                         th:alt="${summoners.profileIconId}" style="width:100px; border-radius:15px;"
+                         class="z-2 position-absolute">
+                    <p class="text-white z-3 position-absolute"
+                       style="margin-top:85px; background-color:#1f1f1f; margin-left:30px; width:40px; border-radius:15px; text-align:center;">
+                        <span th:text="${summoners.summonerLevel}"></span></p>
                 </div>
                 <div class="info col-8">
-                    <p class="fs-3 fw-bold"><span th:text="${puuidDto.gameName}"></span>&nbsp;<span class="text-white-50" th:text="${'#'+puuidDto.tagLine}"></span></p>
+                    <p class="fs-3 fw-bold"><span th:text="${puuidDto.gameName}"></span>&nbsp;<span
+                            class="text-white-50" th:text="${'#'+puuidDto.tagLine}"></span></p>
                     <button class="btn btn-dark" id="gangsin">전적 갱신</button>
                 </div>
             </div>
-            <div class="col row">
-                <div class="tierImg col-3">
-                <img th:src="@{'/images/'+${leagueEntryDto.tier}+'.png'}" th:alt="${leagueEntryDto.tier}" style="width:100px;">
+            <div class="col row" th:if="${leagueEntryDto != null}">
+                <div class="tierImg col-3" >
+                    <img th:src="@{'/images/'+${leagueEntryDto.tier}+'.png'}" th:alt="${leagueEntryDto.tier}"
+                         style="width:100px;">
                 </div>
                 <div class="tierInfo col-8">
-                    <p class="fs-4 fw-bold" style="margin-bottom:-3px;" th:text="${leagueEntryDto.tier+' '+leagueEntryDto.rank}"><br></p>
+                    <p class="fs-4 fw-bold" style="margin-bottom:-3px;"
+                       th:text="${leagueEntryDto.tier+' '+leagueEntryDto.rank}"><br></p>
                     <p class="fs-5" style="margin-bottom:-3px;" th:text="${leagueEntryDto.leaguePoints+' LP'}"></p>
                     <p class="fs-6" th:text="${'승률 ' + (leagueEntryDto.wins * 100) / (leagueEntryDto.wins + leagueEntryDto.losses) + '% ('
                     + leagueEntryDto.wins + '승 ' + leagueEntryDto.losses + '패)'}"></p>
-
                 </div>
+            </div>
+            <div class="col row" th:if="${leagueEntryDto == null}">
+
             </div>
         </div>
         <section class="my-5">
