--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -41,7 +41,7 @@
             <input name="summoners" id="summoners" class="col-6 form-control border-light my-2" type="search"
                    placeholder="소환사 이름" aria-label="Search" style="width:380px; height:35px; text-align:center;">
             <input name="summonersTag" id="summonersTag" class="col-2 form-control border-light my-2" type="search"
-                   placeholder="태그" aria-label="Search" style="width:80px; height:35px; text-align:center;">
+                   value="kr1" aria-label="Search" style="width:80px; height:35px; text-align:center;">
 
             <button class="btn mx-3 col-2" type="submit" id="searchBtn">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor"
